kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx
  namespace: rekrutacja
  labels:
    app: my-nginx
spec:
  selector:
    app: my-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
